normalize links and buttons + fix light theme contrast

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.text-shadow {
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+a.link {
+  @apply text-blue-500 hover:underline hover:underline-offset-4 dark:text-blue-300;
+}
+
+.btn {
+  @apply inline-flex place-items-center rounded bg-gradient-to-br from-indigo-600 to-blue-500 px-5 py-2.5 text-sm font-medium text-white shadow transition-transform duration-200 ease-in-out hover:from-purple-600 hover:to-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 active:scale-95 dark:focus:ring-blue-800;
+}
